## 0.2.29 [XX-10-2022][In Progress]
 - Add the ability to install hiphp on termux Android.

## 0.2.28 [27-09-2022][Last Version]
 - Add "font-awesome" to "php-desktop".
 - Add icons to "php-desktop".
 - Add auto login to "php-desktop".
 - Add file information to "php-desktop".
 - Add line numbering to textarea editor in "php-desktop".
 - Fix "hiphp --dst" & "hiphp --tk" after installation on Ubuntu.
 - Bug fixes & performance improvements.

## 0.2.27 [13-09-2022]
 - Updated some CLI Errors messages.
 - Updated CLI logo.
 - Delete unused codes.
 - Upgrading "php-desktop" in order to avoid errors that occur with various systems.
 - Bug fixes & performance improvements.

## 0.2.26 [07-09-2022]
 - Upgraded Docker files in order to be able to work from outside the container.
 - Add download option in "hiphp_desktop".
 - Bug fixes & performance improvements.

## 0.2.25 [03-09-2022]
 - Fix "--down" command on windows os.
 - Color correction in the command line interface on windows os.
 - Bug fixes & performance improvements.

## 0.2.24 [28-08-2022]
 - Fix "hiphp --ftp"
 - Add "--cd" command for Change directory.
 - Update all commands from "--command" to "command" (You can use both).
 - Update & fix bugs in "hiphp --dst".
 - Update help menu.
 - Bug fixes & performance improvements.

## 0.2.23 [22-08-2022]
 - Fix the entry with uppercase and lowercase letters.
 - Add "--down" command for Download files & folders.
 - Add "--zip" command for Compress files & folders.
 - Update "--help" to "--help [ACTION]".
 - Update the help list and enable it to display help when something goes wrong.
 - Bug fixes & performance improvements.

## 0.2.22 [20-08-2022]
 - Update some info on pypi.
 - Fix "setup.py" windows os.
 - Bug fixes & performance improvements.

## 0.2.21 [18-08-2022]
 - Add "--update" command for check updates.
 - Add "--phpinfo" command for check some server informations.
 - Fix not being able to install internally on Nethunter.
 - Fix some issues in uploading files.