@@ -19,10 +19,15 @@ if [ -z "$1" ]; then
     echo "ex:  hiphp --help               | # hiphp cli help.";
     echo "     hiphp --geth [KEY] [URL]   | # Get the hole Code.";
     echo "     hiphp [KEY] [URL]          | # Connect to the victim's website.";
+    echo "     hiphp --version            | # Get the version number you are working with.";
 
 #cli help:
 elif [ "$1" == "--help" ] ; then
     python3 "${PREFIX}/share/hiphp.py" "--help";
+
+#version:
+elif [ "$1" == "--version" ] ; then
+    python3 "${PREFIX}/share/hiphp.py" "--version";
 
 #cli:
 else
