@@ -21,4 +21,9 @@ Terminal=true
 Categories=RevisionControl;RemoteAccess;
 MimeType=text/x-hiphp
 Keywords=backdoor;controller;
+
+[Desktop Action hiphp-desktop]
+Name=hiphp-desktop
+Exec=bash /usr/local/bin/hiphp --dst
+Icon=/usr/share/hiphp/hiphp.png
 #}END.
